[project]
name = "yerba_logger"
version = "0.1.0"
description = "CLI tool for Yerba Mate enthusiasts!"
authors = [
    { name = "Austin Breunig", email = "abreunig9@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "questionary",
    "pandas",
    "matplotlib",
    "seaborn"
]

[project.scripts]
yerba = "yerba_logger.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["yerba_logger"]

[tool.setuptools.package-data]
yerba_logger = ["data/*.json"]

